# DriverFlow

./: .gitignore  LICENSE  README.md  colab_launcher.ipynb  driverflow.py  pyproject.toml
.github/workflows/: publish.yml
backend/: requirements.txt  requirements_colab.txt
backend/static/: style.css
driverflow/: __init__.py  _driverflow.py  _driverflow_new.py  pipeline.py  refine.py  setup.py  types.py  viz.py
driverflow/backend/: app.py  requirements.txt  requirements_colab.txt
driverflow/backend/static/: app.js  index.html  style.css
driverflow/webui/: __init__.py  cloudflared.py  launcher.py  pipeline_holder.py  render.py  server.py  state.py
driverflow/webui/exporters/: __init__.py  base.py  raw_image.py  raw_video.py  yolo_boxes.py  yolo_segments.py
driverflow/webui/routes/: __init__.py  cloud_mock.py  export.py  import_.py  items.py  models.py  tools.py
driverflow/webui/static/: index.html  style.css
driverflow/webui/static/js/: api.js  main.js  state.js
driverflow/webui/static/js/ui/: annotate-canvas.js  cloud-mock.js  data-workspace.js  import.js  modal.js  model-panel.js  refine-canvas.js  sidebar.js  toast.js  tools.js  workspace.js
driverflow/webui/tools/: __init__.py  annotate.py  base.py  detect.py  refine.py  segment.py
tests/: test_webui.py
