[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "driverflow"
version = "0.2.3"
description = "AI-powered image annotation tool for Google Colab"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Chirag Manjeshwar", email = "chirunder@gmail.com"}
]
keywords = ["annotation", "object-detection", "colab", "groundingdino", "yolo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/chirumer/DriverFlow"
Repository = "https://github.com/chirumer/DriverFlow"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
driverflow = [
    "backend/app.py",
    "backend/requirements.txt",
    "backend/requirements_colab.txt",
    "backend/static/app.js",
    "backend/static/index.html",
    "backend/static/style.css",
]
